force-app/main/default/objects/Despesa_e_Reembolso__c/Despesa_e_Reembolso__c.object-meta.xml
<CustomObject>
    <label>Despesa e Reembolso</label>
    <nameField>
        <label>Nome de Despesa e Reembolso</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Despesas e Reembolsos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>