force-app/main/default/objects/Despesa_e_Reembolso__c/fields/Aprovacao__c.field-meta.xml
<CustomField>
    <fullName>Aprovacao__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Aprovação</label>
    <referenceTo>AprovacaoDespesaReembolso__c</referenceTo>
    <relationshipLabel>Despesas e Reembolsos</relationshipLabel>
    <relationshipName>DespesasReembolsos</relationshipName>
    <type>Lookup</type>
</CustomField>