force-app/main/default/objects/Despesa_e_Reembolso__c/fields/Check_in__c.field-meta.xml
<CustomField>
    <fullName>Check_in__c</fullName>
    <label>Check-in</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>