force-app/main/default/objects/Despesa_e_Reembolso__c/fields/Comentarios__c.field-meta.xml
<CustomField>
    <fullName>Comentarios__c</fullName>
    <label>Comentários</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>