force-app/main/default/objects/Despesa_e_Reembolso__c/fields/Data_da_Visita__c.field-meta.xml
<CustomField>
    <fullName>Data_da_Visita__c</fullName>
    <formula>DATEVALUE(Check_in__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Data da Visita</label>
    <type>Date</type>
</CustomField>