force-app/main/default/objects/Despesa_e_Reembolso__c/fields/Duracao_da_Visita__c.field-meta.xml
<CustomField>
    <fullName>Duracao_da_Visita__c</fullName>
    <label>Duração da Visita</label>
    <length>255</length>
    <type>Text</type>
</CustomField>