force-app/main/default/objects/Despesa_e_Reembolso__c/fields/Hora_da_Visita__c.field-meta.xml
<CustomField>
    <fullName>Hora_da_Visita__c</fullName>
    <formula>TIMEVALUE(Check_in__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hora da Visita</label>
    <type>Time</type>
</CustomField>