force-app/main/default/objects/Despesa_e_Reembolso__c/fields/Km__c.field-meta.xml
<CustomField>
    <fullName>Km__c</fullName>
    <inlineHelpText>Inserir os km que foram rodados e devem ser reembolsados. Obrigatório caso o tipo de reembolso seja &quot;Kilometragem&quot;</inlineHelpText>
    <label>Km</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>