force-app/main/default/objects/Despesa_e_Reembolso__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Despesas e Reembolsos</relationshipLabel>
    <relationshipName>Despesas_e_Reembolsos</relationshipName>
    <type>Lookup</type>
</CustomField>