force-app/main/default/objects/Despesa_e_Reembolso__c/fields/Motivo_da_Recusa__c.field-meta.xml
<CustomField>
    <fullName>Motivo_da_Recusa__c</fullName>
    <label>Motivo da Recusa</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>