force-app/main/default/objects/Despesa_e_Reembolso__c/fields/Nome_da_Empresa__c.field-meta.xml
<CustomField>
    <fullName>Nome_da_Empresa__c</fullName>
    <formula>IF(Conta__c != null, Conta__r.Name, IF(Prospect__c != null, Prospect__r.Name, Lead__r.FirstName + &apos; &apos; + Lead__r.LastName ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nome da Empresa</label>
    <type>Text</type>
</CustomField>