force-app/main/default/objects/Despesa_e_Reembolso__c/fields/Nome_do_Consultor__c.field-meta.xml
<CustomField>
    <fullName>Nome_do_Consultor__c</fullName>
    <formula>CreatedBy.FirstName + &apos; &apos; + CreatedBy.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nome do Consultor</label>
    <type>Text</type>
</CustomField>