force-app/main/default/objects/Despesa_e_Reembolso__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Oportunidade</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Despesas e Reembolsos</relationshipLabel>
    <relationshipName>Despesas_e_Reembolsos</relationshipName>
    <type>Lookup</type>
</CustomField>