force-app/main/default/objects/Despesa_e_Reembolso__c/fields/Outras_Despesas__c.field-meta.xml
<CustomField>
    <fullName>Outras_Despesas__c</fullName>
    <label>Outras Despesas</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Tipo_de_Despesa__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Refeição</fullName>
            </value>
            <value>
                <fullName>Estacionamento</fullName>
            </value>
            <value>
                <fullName>Pedágio</fullName>
            </value>
            <value>
                <fullName>Táxi</fullName>
            </value>
            <value>
                <fullName>Passagem</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>