force-app/main/default/objects/Despesa_e_Reembolso__c/fields/Prospect__c.field-meta.xml
<CustomField>
    <fullName>Prospect__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Prospect</label>
    <referenceTo>Prospect__c</referenceTo>
    <relationshipLabel>Despesas e Reembolsos</relationshipLabel>
    <relationshipName>Despesas_e_Reembolsos</relationshipName>
    <type>Lookup</type>
</CustomField>