force-app/main/default/objects/Despesa_e_Reembolso__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Rascunho</fullName>
                <default>true</default>
                <label>Rascunho</label>
            </value>
            <value>
                <fullName>EnviadoParaRelatorio</fullName>
                <label>Enviado para o Relatório</label>
            </value>
            <value>
                <fullName>Recusado</fullName>
                <label>Recusado Pelo Gestor</label>
            </value>
            <value>
                <fullName>Aprovado</fullName>
                <label>Aprovado Pelo Gestor</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>