force-app/main/default/objects/Despesa_e_Reembolso__c/fields/Tipo_de_Despesa__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_Despesa__c</fullName>
    <label>Tipo de Despesa</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Tipo_de_Despesa</valueSetName>
    </valueSet>
</CustomField>