force-app/main/default/objects/Despesa_e_Reembolso__c/fields/Valor_do_Reembolso_de_KM__c.field-meta.xml
<CustomField>
    <fullName>Valor_do_Reembolso_de_KM__c</fullName>
    <description>O valor calculado é referente aos KMs inseridos no registro multiplicado por R$0,91.</description>
    <formula>(Km__c * 0.91)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Valor do Reembolso de KM</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>