force-app/main/default/objects/Despesa_e_Reembolso__c/validationRules/Valida_KM.validationRule-meta.xml
<ValidationRule>
    <fullName>Valida_KM</fullName>
    <active>true</active>
    <errorConditionFormula>AND(	
				ISBLANK(Km__c),
    ISPICKVAL(Tipo_de_Despesa__c, &quot;KM&quot;)
				)</errorConditionFormula>
    <errorDisplayField>Km__c</errorDisplayField>
    <errorMessage>Quando o tipo de despesa é &quot;KM&quot; o campo Km deve ser preenchido.</errorMessage>
</ValidationRule>