force-app/main/default/objects/Despesa_e_Reembolso__c/validationRules/Valida_Relacionamento.validationRule-meta.xml
<ValidationRule>
    <fullName>Valida_Relacionamento</fullName>
    <active>true</active>
    <description>Valida se há uma Conta, Lead ou Prospect preenchido para o pedido de reembolso</description>
    <errorConditionFormula>ISBLANK(Conta__c) &amp;&amp; ISBLANK (Lead__c) &amp;&amp; ISBLANK (Prospect__c)</errorConditionFormula>
    <errorMessage>A Conta, Lead ou Prospect correspondente ao pedido de reembolso deve ser preenchido.</errorMessage>
</ValidationRule>