force-app/main/default/objects/Despesa_e_Reembolso__c/validationRules/validar_preenchimento_unico.validationRule-meta.xml
<ValidationRule>
    <fullName>validar_preenchimento_unico</fullName>
    <active>true</active>
    <errorConditionFormula>OR(
        AND(
            NOT(ISBLANK(Conta__c)),
            NOT(ISBLANK(Lead__c)),
            ISBLANK(Prospect__c)),
        AND(
            NOT(ISBLANK(Conta__c)),
            NOT(ISBLANK(Lead__c)),
            NOT(ISBLANK(Prospect__c))),
        AND(
            ISBLANK(Conta__c),
            NOT(ISBLANK(Lead__c)),
            NOT(ISBLANK(Prospect__c))),
        AND(
            NOT(ISBLANK(Conta__c)),
            ISBLANK(Lead__c),
            NOT(ISBLANK(Prospect__c)))
)</errorConditionFormula>
    <errorMessage>Preencher apenas uma Conta, ou um Lead, ou um Prospect.</errorMessage>
</ValidationRule>