force-app/main/default/objects/Despesa_e_Reembolso__c/listViews/Aprovado_Pelo_Gestor.listView-meta.xml
<ListView>
    <fullName>Aprovado_Pelo_Gestor</fullName>
    <columns>NAME</columns>
    <columns>Conta__c</columns>
    <columns>Check_in__c</columns>
    <columns>Km__c</columns>
    <columns>Valor_do_Reembolso_de_KM__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Aprovado</value>
    </filters>
    <label>Aprovado pelo Gestor</label>
</ListView>