force-app/main/default/objects/Despesa_e_Reembolso__c/listViews/Rascunho.listView-meta.xml
<ListView>
    <fullName>Rascunho</fullName>
    <columns>NAME</columns>
    <columns>Conta__c</columns>
    <columns>Check_in__c</columns>
    <columns>Km__c</columns>
    <columns>Valor_do_Reembolso_de_KM__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Rascunho</value>
    </filters>
    <label>Rascunho</label>
</ListView>