force-app/main/default/objects/Despesa_e_Reembolso__c/listViews/Recusado_pelo_Gestor.listView-meta.xml
<ListView>
    <fullName>Recusado_pelo_Gestor</fullName>
    <columns>NAME</columns>
    <columns>Conta__c</columns>
    <columns>Check_in__c</columns>
    <columns>Km__c</columns>
    <columns>Valor_do_Reembolso_de_KM__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Motivo_da_Recusa__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Recusado</value>
    </filters>
    <label>Recusado pelo Gestor</label>
</ListView>